# Rust-Discovery

./: Cargo.toml  README.md
chapter2_guessing_game/: Cargo.toml
hello_world/: main
kafka-setup/: Readme.md  (+2 more)
mfy_api_generator/my-project/: .checkov.yml  .dockerignore  .envrc.sample  .flake8  .gitignore  .mega-linter.yml  .spectral.yaml  .yamllint.yml  Cargo.toml  README.md  cargo_id_ed25519.pub  mega-linter.sh
mfy_api_generator/my-project/.cargo/: config
mfy_api_generator/my-project/.devcontainer/: Dockerfile  devcontainer-setup.sh
mfy_api_generator/my-project/.github/: actionlint.yaml  dependabot.yml
mfy_api_generator/my-project/.github/actions/: promote.sh
mfy_api_generator/my-project/.github/workflows/: README.md  ci.yml  deploy.yml  promote.yml
mfy_api_generator/my-project/devops/: .envrc.sample  Dockerfile  helmfile.yaml  publish-package.py
mfy_api_generator/my-project/devops/chart-ms/: Chart.yaml  values.yaml  values_ai-dev.yaml  values_ai-pro.yaml  values_ai-stg.yaml
mfy_api_generator/my-project/devops/chart-ms/grafana-dashboards/: README.md
mfy_api_generator/my-project/devops/chart-ms/templates/: configmap-grafana-dashboards.yaml
mfy_api_generator/my-project/src/: lib.rs  main.rs  settings.rs
mfy_api_generator/my-project/src/domain/: animal_type.rs  create_animal.rs  dog.rs  mod.rs
mfy_api_generator/my-project/src/routes/: get_ai_my_project_animals_dogs_id.rs  mod.rs  post_ai_my_project_animals.rs
mfy_api_generator/my-project/src/service/: error.rs  mod.rs  state.rs
mfy_api_generator/my-project/tests/: api.http  common-routes.rs
(+4 files in other folders)
