[package]
name = "my_project"
version = "0.1.0"
authors = ["malik.eljaouadi@wefox.com"]
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
axum-macros = "0.3"
clap = { version = "4", features = ["derive", "env"] }
http = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "env-filter",
  "json",
] }
wai-axum-extra = { git = "ssh://git@github.com/uberforcede/wefox-ai-wai-rust.git", features = ["clap", "derive"] }

[dev-dependencies]
assert2 = "0.3"
once_cell = "1"
proptest = "1"
rstest = "0.17"
wai-axum-extra-test = { git = "ssh://git@github.com/uberforcede/wefox-ai-wai-rust.git" }

[profile.release]
codegen-units = 1
lto = true
